button images are no longer cropped (fixes #16)

--- a/src/css/icons.css
+++ b/src/css/icons.css
@@ -1,7 +1,7 @@
 .button-img {
     width: 45px;
     height: 45px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 #button-container {
