--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -5,7 +5,7 @@
 .icon-uploader {
     width: 45px;
     height: 45px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 @view-transition {
